<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#037748"
    android:backgroundTint="#2E4340"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImageHome"
        android:layout_width="250dp"
        android:layout_height="124dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comment_va_votre_coeur" />

    <Button
        android:id="@+id/next2Button"
        android:layout_width="189dp"
        android:layout_height="72dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#B17866"
        android:textColor="#000000"
        android:onClick="action_Start"
        android:text="@string/do_the_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yName"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#B17866"
        android:onClick="action_Exit"
        android:text="@string/exit"
        android:textColor="#070707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next2Button"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/yName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="153dp"
        android:text="@string/hearttest"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageHome" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="265dp"
        android:layout_marginTop="80dp"
        android:text="@string/by_isma_l_sousane"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageHome" />

</androidx.constraintlayout.widget.ConstraintLayout>