<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#037748"
    android:backgroundTint="#2E4340"
    tools:context=".MainActivityPage4">

  <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="250dp"
      android:layout_height="65dp"
      android:layout_gravity="center"
      android:layout_marginTop="13dp"
      android:layout_marginEnd="81dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textview3">

    <RadioButton
        android:id="@+id/y1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/yes"
        android:textColor="#F3F2F2" />

    <RadioButton
        android:id="@+id/n1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/no"
        android:textColor="#FFFDFD" />

  </RadioGroup>

  <RadioGroup
      android:id="@+id/radioGroup2"
      android:layout_width="250dp"
      android:layout_height="65dp"
      android:layout_gravity="center"
      android:layout_marginStart="80dp"
      android:layout_marginTop="13dp"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4">

    <RadioButton
        android:id="@+id/y2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/yes"
        android:textColor="#F3F2F2" />

    <RadioButton
        android:id="@+id/n2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/no"
        android:textColor="#FFFDFD" />

  </RadioGroup>

  <Button
      android:id="@+id/next3Button"
      android:layout_width="124dp"
      android:layout_height="55dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="8dp"
      android:backgroundTint="#B17866"
      android:onClick="onClickNext3"
      android:text="@string/next"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <Button
      android:id="@+id/previous3Button"
      android:layout_width="124dp"
      android:layout_height="55dp"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="8dp"
      android:backgroundTint="#B17866"
      android:onClick="onClickPrevious3"
      android:text="@string/previous"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/displayName2"
      android:layout_width="185dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="137dp"
      android:layout_marginEnd="137dp"
      android:layout_marginBottom="33dp"
      android:text="@string/my_heart_monitoring"
      android:textAlignment="center"
      android:textColor="#EFEBEB"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/textview3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="340dp"
      android:layout_height="136dp"
      android:layout_marginStart="35dp"
      app:layout_constraintBottom_toTopOf="@+id/displayName2"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/nicepng_heartbeat_line_png_650184"
      android:contentDescription="@string/my_heart_monitoring" />

  <TextView
      android:id="@+id/textview3"
      android:layout_width="386dp"
      android:layout_height="41dp"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="13dp"
      android:text="@string/have_you_already_checked_with_your_gp_about_your_cardiovascular_risk"
      android:textAlignment="viewStart"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/radioGroup"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="357dp"
      android:layout_height="32dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/have_you_ever_had_a_cardiac_check_up"
      android:textAlignment="viewStart"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="357dp"
      android:layout_height="32dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/have_you_ever_consulted_a_cardiologist"
      android:textAlignment="viewStart"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

  <RadioGroup
      android:id="@+id/radioGroup3"
      android:layout_width="250dp"
      android:layout_height="65dp"
      android:layout_gravity="center"
      android:layout_marginStart="80dp"
      android:layout_marginTop="13dp"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5">

    <RadioButton
        android:id="@+id/y3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/yes"
        android:textColor="#F3F2F2" />

    <RadioButton
        android:id="@+id/n3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/no"
        android:textColor="#FFFDFD" />

  </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>